2009-02-22  Hubert Figuiere  <hub@figuiere.net>

	* source/common/XMLParserAdapter.hpp: 
	Remove an annoying warning.

2009-02-20  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: 
	* m4/shave.m4:
	* shave-libtool.in:
	* shave.in:
	Add shave to make the build output saner.

=== 2.1.1 ===

2008-12-28  Michael Biebl <biebl@debian.org>

	* tests/utils.cpp
	* samples/source/XMPFilesCoverage.cpp
	* source/common/XML_Node.cpp
	Fix build on gcc 4.4

2008-12-24  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FileHandlers/P2_Handler.cpp (SetStartTimecodeFromLegacyXML): 
	Don't compare string pointers. (Closes: #19312)

=== 2.1.0 ===

2008-12-24  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/test-bgo.cpp
        * exempi/tests/test-xmpfiles.cpp
	Remove serious warnings.

2008-12-21  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/Makefile.am
        * exempi/tests/test-bgo.cpp
	* exempi/tests/test-exempi-core.cpp
	* exempi/tests/test-serialise.cpp
	* exempi/tests/test-tiff-leak.cpp
	* exempi/tests/test-write-new-prop.cpp
	* exempi/tests/test-xmpfiles-write.cpp
	* exempi/tests/test-xmpfiles.cpp
	* exempi/tests/test3.cpp
	* exempi/tests/testinit.cpp
	Migrated to use boost/test/minimal
	
	* exempi/tests/test1.cpp
	* exempi/tests/test2.cpp
	Split out for the above change.

2008-12-19  Hubert Figuiere  <hub@figuiere.net>

	* exempi/Makefile.am (EXTRA_DIST): Added libexempi.sym

2008-11-26  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/Makefile.am (TESTS_ENVIRONMENT): 
	BOOST_TEST_CATCH_SYSTEM_ERRORS=no is set before running
	the test. This avoid a failure because of system() on 
	boost 1.35 and later.
	See https://svn.boost.org/trac/boost/ticket/1723

2008-11-24  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/ReconcileTIFF.cpp (ImportSingleTIFF_ASCII): 
	Re-enable the conversion for UNIX. Disabled in the original SDK.

	* exempi/tests/Makefile.am:
	* exempi/tests/fdo18635.jpg:
	* exempi/tests/test-bgo.cpp