@@ -1,10 +1,9 @@
-2.2
-
-- NEW: added shave to the build system for sane ouput.
-
 2.1.1
 
-- Bug: fdo#19312 source/XMPFiles/FileHandlers/P2_Handler.cpp was using 
+- NEW: added shave to the build system for sane output.
+- Bug #16030: if the property is an array or struct allow "" to be passed
+  as a value.
+- Bug #19312: source/XMPFiles/FileHandlers/P2_Handler.cpp was using 
   an improper string comparison. (made rpmlint unhappy).
 
 2.1.0
